fix responsive styles for tab view: no longer lose right boundary on small screens

--- a/app/assets/stylesheets/app/25_mixins.scss
+++ b/app/assets/stylesheets/app/25_mixins.scss
@@ -13,15 +13,15 @@ $blue: #18b1e7;
   width: 938px;
 
   @media only screen and (min-width:768px) and (max-width:959px){
-    width:748px;
+    width:746px;
   }
 
   @media only screen and (max-width:767px){
-    width: 280px;
+    width: 278px;
   }
 
   @media only screen and (min-width:480px) and (max-width:767px){
-    width: 400px;
+    width: 398px;
   }
 
 }
@@ -32,15 +32,15 @@ $blue: #18b1e7;
   width: 918px;
 
   @media only screen and (min-width:768px) and (max-width:959px){
-    width:728px;
+    width:726px;
   }
 
   @media only screen and (max-width:767px){
-    width: 260px;
+    width: 258px;
   }
 
   @media only screen and (min-width:480px) and (max-width:767px){
-    width: 380px;
+    width: 378px;
   }
 }
 
